Fix bu where horizontal scrolling was possible on smaller screens

--- a/scss/global/_boilerplate.scss
+++ b/scss/global/_boilerplate.scss
@@ -6,6 +6,10 @@
     padding: 0;
 }
 
+#root {
+    overflow-x: hidden;
+}
+
 img, picture, video, canvas, svg {
     width: 100%;
     display: inline-block;
